@startuml
'https://plantuml.com/class-diagram

skinparam groupInheritance 1

scale 1.0

class Course {
  Agenda agenda;
}
class Agenda {
  LinkedList<Item> items;
}
interface Item {
  Duration calculateDuration();
}
class CourseDay {
  LocalDate date
}
class Module {
  LocalDate date
}
class Content {
  enum ContentType type
}
enum ContentType {
  Welcome, Break, Topic, ...
}

class CourseDaySchedule {}
class ContentSchedule {}
class CourseDayScheduler {
  schedule(Course);
}

Course      ..>     Agenda       : "contains one"
CourseDay   ..>     Agenda
Module      ..>     Agenda
Agenda      o--     Item         : " contains many"
Item        <|--    CourseDay    : "realizes"
Item        <|--    Module       : "realizes"
Item        <|--    Content      : "realizes"
Content     ..>     ContentType  : " has type"

CourseDayScheduler ..> CourseDay         : "use"
CourseDayScheduler ..> CourseDaySchedule : "use"

@enduml